# ArteFact

./: .eslintrc.cjs  .flake8  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  run_hc.sh  sentences.json  setup.cfg  test_heatmap.py  tsconfig.app.json  tsconfig.app.tsbuildinfo  works.json
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
Marker_Output/W1989549616/: W1989549616.md
Marker_Output/W2019734204/: W2019734204_meta.json
Marker_Output/W2020798572/: W2020798572.md
Marker_Output/W2021094421/: W2021094421.md
Marker_Output/W2024149543/: W2024149543.md
Marker_Output/W2029124454/: W2029124454_meta.json
Marker_Output/W2124297491/: W2124297491_meta.json
Marker_Output/W2608926771/: W2608926771.md  W2608926771_meta.json
Marker_Output/W2678154589/: W2678154589.md
Marker_Output/W3110840203/: W3110840203.md  W3110840203_meta.json
Marker_Output/W3212048450/: W3212048450.md  (+1 more)
PaintingClip/: adapter_config.json  environment_lock.yml
PaintingClip_Old/: README.md
backend/: pyproject.toml  run_backend.sh
backend/runner/: app.py  config.py  filtering.py  heatmap.py  inference.py  patch_inference.py  tasks.py
backend/runner/data/: creators.json
backend/tests/: grad_eclip.py  test_api_heatmap.py  test_heatmap.py  test_patch_inference.py
frontend/: index.html
pipeline/: Bede_Guide_1.md  README.md  Using_Bede.md  batch_download_works.py  batch_embed_sentences.py  batch_harvest_wikidata.py  batch_markdown_file_to_english_sentences.py  batch_pdf_to_markdown.py  batch_pdf_to_markdown_sharded.py  batch_query_open_alex.py  bede-requirements.txt  blacklist.json  build_topics_json.py  checkpoint.parquet  consolidate_embeddings.py  download_single_work.py  download_works_env.yml  download_works_on.py  efficient_batch_embed_sentences.py  embed_sentence_with_clip.py  embedding_env.yml  embedding_env_minimal.yaml  enrich_works_metadata.py  export_blacklist.py  export_painter_counts.py  generate_painter_list.py  markdown_file_to_english_sentences.py  merge_works_and_artists.py  order_painter_counts.py  painter_counts.xlsx  painter_counts_ordered.xlsx  painters.xlsx  paintings.parquet  paintings.xlsx  parquet_to_excel.py  pdf_env.yml  pdf_processing_env.yaml  pdf_processing_env.yml  pdf_to_markdown_pymupdf.py  pyproject.toml  (+18 more)
src/: App.tsx  favicon.test.ts
tests/: test_api.py
viewer/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
viewer_js/: index.html
(+3138 files in other folders)
