[project]
name = "hc-services"
version = "0.0.0"
requires-python = ">=3.9"

dependencies = [
    "flask>=2.3",
    "flask-cors>=4.0",
    "boto3>=1.34",
    "celery>=5.3",
    # Leave Torch/PEFT out for now to keep CI light
]

[tool.setuptools.packages.find]
where = ["hc_services"]

[project.optional-dependencies]
dev = [
    "black>=24",
    "flake8>=7",
    "pytest>=8",
    "moto[s3,sqs,dynamodb]",
    "torch",            # <- heavy, but now only installed with `[dev]`
    "peft",
]
