[project]
name = "hc-services"
version = "0.0.0"
requires-python = ">=3.9"

dependencies = [
    "flask>=2.3",
    "flask-cors>=4.0",
    # Torch and PEFT moved to main dependencies for local inference
    "torch",
    "peft",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["hc_services"]

[project.optional-dependencies]
dev = [
    "black>=24",
    "flake8>=7",
    "pytest>=8",
]
