[project]
name = "hc-services"
version = "0.0.0"
requires-python = ">=3.9"

dependencies = [
    "flask>=2.3",
    "flask-cors>=4.0",
    "torch>=2.6",          # CVE-2025-32434 fix
    "peft",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["hc_services"]

[project.optional-dependencies]
dev = [
    "black>=24",
    "flake8>=7",
    "pytest>=8",
]
